Fix NPC action summary expand/collapse behavior

--- a/src/styles/actor/npc/_index.scss
+++ b/src/styles/actor/npc/_index.scss
@@ -475,14 +475,10 @@ $light-text: #f5efe0;
             }
 
             .item-summary {
-                grid-column: 1/-1;
+                flex: 0 1 auto;
                 margin-top: 0.5em;
             }
         }
-    }
-
-    .expandable {
-        display: none;
     }
 
     .labelled-field {
